tests/testfiles/valid/arithmetics/addition_subtraction_priority.c
int main() {
    int a = 5; 
    int b = 2; 
    int c = 3; 
    int d = 4;
    int result;
    result = ((a + b) * (c - d)) - ((a + c) - (b * d));
    return result;
}
