tests/testfiles/invalid/arithmetics/assign_to_num.c
int main() {
    10 = 5;
    return 0;
}
